address page edit add place order page done

--- a/views/user/aboutUs.ejs
+++ b/views/user/aboutUs.ejs
@@ -111,4 +111,5 @@
     <%-include("../partials/user/userFooter.ejs")%>
 </body>
 <script src="/javascripts/user/aboutUs.js"></script>
+<script src="../../javascripts/user/common.js"></script>
 </html>
