--- a/views/user/category.ejs
+++ b/views/user/category.ejs
@@ -25,5 +25,6 @@
 
     </div>
     <%-include("../partials/user/userFooter.ejs")%>
+    <script src="../../javascripts/user/common.js"></script>
 </body>
 </html>
