--- a/views/user/createAccount.ejs
+++ b/views/user/createAccount.ejs
@@ -104,4 +104,5 @@
    
 </body>
 <script src="/javascripts/user/createAccount.js"></script>
+<script src="../../javascripts/user/common.js"></script>
 </html>
