--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -67,4 +67,5 @@ input:-webkit-autofill {
    
 </body>
 <script src="/javascripts/user/login.js"></script>
+<script src="../../javascripts/user/common.js"></script>
 </html>
