--- a/views/user/loginpswd.ejs
+++ b/views/user/loginpswd.ejs
@@ -90,4 +90,5 @@ input:-webkit-autofill {
     }
 </script>
 <script src="/javascripts/user/loginpswd.js"></script>
+<script src="../../javascripts/user/common.js"></script>
 </html>
