--- a/views/user/myCart.ejs
+++ b/views/user/myCart.ejs
@@ -136,3 +136,4 @@
     <script src="/javascripts/user/myCart.js"></script>
     
 </body>
+<script src="../../javascripts/user/common.js"></script>
