--- a/views/user/orderSuccessful.ejs
+++ b/views/user/orderSuccessful.ejs
@@ -36,3 +36,4 @@
     </main>  
     <script src="/javascripts/user/stateLoad.js"></script>
 </body>
+<script src="../../javascripts/user/common.js"></script>
