--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -56,4 +56,5 @@
    
 </body>
 <script src="/javascripts/user/myAccount.js"></script>
+<script src="../../javascripts/user/common.js"></script>
 </html>
