--- a/views/user/resetpswd.ejs
+++ b/views/user/resetpswd.ejs
@@ -82,4 +82,5 @@
    
 </body>
 <script src="/javascripts/user/resetpassword.js"></script>
+<script src="../../javascripts/user/common.js"></script>
 </html>
