--- a/views/user/myAccount.ejs
+++ b/views/user/myAccount.ejs
@@ -91,4 +91,5 @@
     <%-include("../partials/user/userFooter.ejs")%>
 </body>
 <script src="/javascripts/user/myAccount.js"></script>
+<script src="../../javascripts/user/common.js"></script>
 </html>
