--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -64,7 +64,7 @@
                 </div>
             <%})%>
           
-            <div class="w-full">
+            <div class="w-full pb-8">
                 <a href="/user/buynow" class="flex justify-between items-center mt-3 bg-white rounded-md w-full px-3">
                     <p class="font-semibold text-sm">Add new Address</p>
                     <div class=" rounded-[50%] cursor-pointer bg-gray-100 m-[5px] inline-block">
