--- a/views/user/orderSummery.ejs
+++ b/views/user/orderSummery.ejs
@@ -11,78 +11,43 @@
         <div class="">
             <div class="">
                 <p class="font-semibold text-lg">Order Summery</p>
-                <div class=""><!--Container-->
-                    <div class="flex space-x-6 mt-5">
-                        <div class="flex flex-col items-center w-fit  ">
-                            <div class="flex flex-col items-center text-xs ">
-                                <div class="mt-[2p] w-6 h-6 rounded-full border-[1px] border-[#476B73] flex items-center justify-center ">
-                                    <span class="material-symbols-outlined text-[#476B73]">
-                                        done
-                                        </span>
-                                </div>
-                                <p class="text-[10px] text-[#666666]">Ordered</p>
-                            </div>
-                            <div class="w-[2px] h-16 bg-[#476B73] ">
-                            </div>
-                        </div>  
-                        <div class="text-sm">
-                            <p class="text-green-800">Ordered</p>
-                            <p class="text-[#666666]">Order confirmed</p>
-                        </div>
-                    </div>
-                    <div class="flex space-x-6 mt-3">
-                        <div class="flex flex-col items-center w-fit  ">
-                            <div class="flex flex-col items-center text-xs ">
-                                <div class="mt-[2p] w-6 h-6 rounded-full border-[1px] border-[#476B73] flex items-center justify-center ">
-                                    <span class="material-symbols-outlined text-[#476B73]">
-                                        done
-                                        </span>
-                                </div>
-                                <p class="text-[10px] text-[#666666]">Packed</p>
-                            </div>
-                            <div class="w-[2px] h-16 bg-[#476B73] ">
-                            </div>
-                        </div>  
-                        <div class="text-sm">
-                            <p class="text-green-800">Packed</p>
-                            <p class="text-[#666666]">Item packed from warehouse</p>
-                        </div>
-                    </div>
-                    <div class="flex space-x-6 mt-3">
-                        <div class="flex flex-col items-center w-fit  ">
-                            <div class="flex flex-col items-center text-xs ">
-                                <div class="mt-[2p] w-6 h-6 rounded-full border-[1px] border-[#476B73] flex items-center justify-center ">
-                                    <span class="material-symbols-outlined text-[#476B73]">
-                                        done
-                                        </span>
-                                </div>
-                                <p class="text-[10px] text-[#666666]">Shipped</p>
-                            </div>
-                            <div class="w-[2px] h-16 bg-[#476B73] ">
-                            </div>
-                        </div>  
-                        <div class="text-sm">
-                            <p class="text-green-800">Shipped</p>
-                            <p class="text-[#666666]">Your order is on its way! </p>
-                        </div>
-                    </div>
-                    <div class="flex space-x-6 mt-3">
-                        <div class="flex flex-col items-center w-fit  ">
-                            <div class="flex flex-col items-center text-xs ">
-                                <div class="mt-[2p] w-6 h-6 rounded-full border-[1px] border-[#476B73] flex items-center justify-center ">
-                                    <span class="material-symbols-outlined text-[#476B73]">
-                                        done
-                                        </span>
-                                </div>
-                                <p class="text-[10px] text-[#666666]">Delivered</p>
-                            </div>
-                        </div>  
-                        <div class="text-sm">
-                            <p class="text-green-800">Estimation of arrival</p>
-                            <p class="text-[#666666]">january 3 2023 </p>
-                        </div>
-                    </div>
-                </div>
+                
+
+<ol class="flex my-8 items-center w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400 sm:text-base">
+    <li class="flex md:w-full items-center text-blue-600 dark:text-blue-500 sm:after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
+        <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
+            <svg class="w-3.5 h-3.5 sm:w-4 sm:h-4 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+            </svg>
+            Ordered <span class="hidden sm:inline-flex sm:ms-2"></span>
+        </span>
+    </li>
+    <li class="flex md:w-full items-center after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
+        <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
+            <svg class="w-3.5 h-3.5 sm:w-4 sm:h-4 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+            </svg>
+            Pacekd <span class="hidden sm:inline-flex sm:ms-2"></span>
+        </span>
+    </li>
+
+    <li class="flex md:w-full items-center after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-200 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10 dark:after:border-gray-700">
+        <span class="flex items-center after:content-['/'] sm:after:hidden after:mx-2 after:text-gray-200 dark:after:text-gray-500">
+            <svg class="w-3.5 h-3.5 sm:w-4 sm:h-4 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+            </svg>
+            Shipped <span class="hidden sm:inline-flex sm:ms-2"></span>
+        </span>
+    </li>
+    
+    <li class="flex items-center">
+        <svg class="w-3.5 h-3.5 sm:w-4 sm:h-4 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+            <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z"/>
+        </svg>
+        Delivered
+    </li>
+</ol>
+
             </div>
         </div>
         <div class="bg-white rounded-md px-5 py-3 space-y-3 drop-shadow-sm mt-3" ><!--Product show--> <div class="flex space-x-3 items-center border-b "> <div class="lg:w-4/12  w-5/12 border-r pr-3 pb-2">
